# filepath

./: .drone.yaml  .ghci  .gitignore  .gitlab-ci.yml  .hlint.yaml  .travis.yml  AutoTest.hs  GenTests.hs  Generate.hs  HACKING.md  LICENSE  Makefile  Makefile.nhc98  README.md  Tests.hs  appveyor.yml  cabal.project  changelog  changelog.md  filepath.cabal  make-docs.bat  make.bat  odd.txt  package.conf.in  push.bat  readme.txt  stack.yaml  test.bat  travis.hs
.github/scripts/: brew.sh
.github/workflows/: ci.yml  mhs.yaml  test.yaml
.gitlab/: ci.sh
System/: AbstractFilePath.hs  AbstractFilePath.hs-boot  FilePath.hs  OsPath.hs  OsString.hs
System/AbstractFilePath/: Common.hs  Encoding.hs  Internal.hs  Posix.hs  Types.hs  Windows.hs
System/AbstractFilePath/Data/ByteString/: Short.hs
System/AbstractFilePath/Data/ByteString/Short/: Decode.hs  Encode.hs  Internal.hs  Word16.hs
System/AbstractFilePath/Encoding/: Internal.hs
System/AbstractFilePath/Posix/: Internal.hs
System/AbstractFilePath/Windows/: Internal.hs
System/FilePath/: Compat.hs  Current.hs  Internal.hs  Posix.hs  Version_0_09.hs  Version_0_10.hs  Version_0_11.hs  Version_0_12.hs  Windows.hs
System/FilePath/Data/ByteString/Short/: Decode.hs  Encode.hs  Internal.hs  Word16.hs
System/FilePath/Internal/: Parser.hs
System/OsPath/: Common.hs  Encoding.hs  Internal.hs  Posix.hs  Types.hs  Windows.hs
System/OsPath/Data/ByteString/: Short.hs
System/OsPath/Data/ByteString/Short/: Hidden.hs  Internal.hs  Word16.hs
System/OsPath/Data/ByteString/Short/Internal/: Hidden.hs
System/OsPath/Data/ByteString/Short/Word16/: Hidden.hs
System/OsPath/Encoding/: Internal.hs
System/OsPath/Encoding/Internal/: Hidden.hs
System/OsString/: Common.hs  Internal.hs  Posix.hs  Types.hs  Windows.hs
System/OsString/Internal/: Hidden.hs  Types.hs
System/OsString/Internal/Types/: Hidden.hs
System/OsString/Posix/: Hidden.hs
System/OsString/Windows/: Hidden.hs
bench/: BenchFilePath.hs  TastyBench.hs
filepath/: Generate.hs  changelog.md  filepath.cabal
filepath-internals/: README.md  changelog.md  filepath-internals.cabal
filepath-internals/System/OsPath/Data/ByteString/Short/Word16/: Internal.hs
filepath-internals/System/OsPath/Encoding/: Internal.hs
filepath-internals/System/OsPath/Types/: Internal.hs
filepath-internals/System/OsString/Types/: Internal.hs
filepath/System/: OsString.hs
filepath/System/OsPath/: Common.hs  Internal.hs  Posix.hs  Types.hs
filepath/System/OsPath/Data/ByteString/: Short.hs
filepath/System/OsString/: Common.hs  Internal.hs  Posix.hs  Windows.hs
filepath/bench/: BenchFilePath.hs
filepath/tests/: TestUtil.hs
filepath/tests/abstract-filepath/: Arbitrary.hs  OsPathSpec.hs
filepath/tests/bytestring-tests/Properties/: Common.hs
filepath/tests/filepath-equivalent-tests/: TestEquiv.hs
filepath/tests/filepath-tests/: TestGen.hs
test/: AutoTest.hs  GenTests.hs  test.bat
tests/: .gitignore  AutoTest.hs  GenTests.hs  Main.hs  Makefile  Properties.hs  Test.hs  TestEquiv.hs  TestGen.hs  TestUtil.hs  all.T  filepath.stdout
tests/Properties/: Common.hs  ShortByteString.hs
tests/Properties/ShortByteString/: Word16.hs
tests/abstract-filepath/: AbstractFilePathSpec.hs  Arbitrary.hs  EncodingSpec.hs  OsPathSpec.hs  Test.hs
tests/afpp/: AbstractFilePathSpec.hs  Arbitrary.hs  EncodingSpec.hs  Test.hs
tests/bytestring-tests/: Main.hs
tests/bytestring-tests/Properties/: Common.hs  OsString.hs  PosixString.hs  WindowsString.hs
tests/bytestring-tests/Properties/ShortByteString/: Word16.hs
tests/filepath-equivalent-tests/: Gen.hs  TestEquiv.hs
tests/filepath-tests/: TestGen.hs
