name:           filepath
version:        1.3.0.3
-- NOTE: Don't forget to update ./changelog.md
license:        BSD3
license-file:   LICENSE
author:         Neil Mitchell <ndmitchell@gmail.com>
maintainer:     Neil Mitchell <ndmitchell@gmail.com>
copyright:      Neil Mitchell 2005-2014
bug-reports:    https://github.com/haskell/filepath/issues
homepage:       http://www-users.cs.york.ac.uk/~ndm/filepath/
category:       System
build-type:     Simple
synopsis:       Library for manipulating FilePaths in a cross platform way.
cabal-version:  >=1.10
tested-with:    GHC==7.6.3, GHC==7.6.2, GHC==7.6.1, GHC==7.4.2, GHC==7.4.1, GHC==7.2.2, GHC==7.2.1, GHC==7.0.4, GHC==7.0.3, GHC==7.0.2, GHC==7.0.1, GHC==6.12.3
description:
    A library for 'FilePath' manipulations, using Posix or Windows filepaths
    depending on the platform.
    .
    Both "System.FilePath.Posix" and "System.FilePath.Windows" provide
    the same interface. See either for examples and a list of the
    available functions.

extra-source-files:
    System/FilePath/Internal.hs
    README.md
    changelog.md

library
    default-language: Haskell98
    other-extensions:
        CPP
    if impl(GHC >= 7.2)
        other-extensions: Safe

    exposed-modules:
        System.FilePath
        System.FilePath.Posix
        System.FilePath.Windows

    build-depends:
        base >= 4 && < 4.9

    ghc-options: -Wall

-- When run directly from the Git repo, you need to
-- generate the tests/FilePath_Tests.hs file via
--
--  cd tests/ && runghc ./GenTests.hs
test-suite filepath-tests
    type: exitcode-stdio-1.0
    default-language: Haskell98
    main-is: FilePath_Test.hs
    hs-source-dirs: tests
    other-modules: AutoTest
    build-depends:
        filepath,
        base,
        QuickCheck == 2.6.*,
        random     == 1.0.*

source-repository head
    type:     git
    location: https://github.com/haskell/filepath.git
