cabal-version:      2.2
name:               filepath-internals
version:            1.4.100.5

-- NOTE: Don't forget to update ./changelog.md
license:            BSD-3-Clause
license-file:       LICENSE
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Julian Ospald <hasufell@posteo.de>
copyright:          Neil Mitchell 2005-2020, Julain Ospald 2021-2022
bug-reports:        https://github.com/haskell/filepath/issues
homepage:
  https://github.com/haskell/filepath/blob/master/README.md

category:           System
build-type:         Simple
synopsis:           Library for manipulating FilePaths in a cross platform way (internals).
tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.3

description:
  FilePath internals. This follows PVP, but makes no attempts at providing a stable interface.

extra-doc-files:
  changelog.md
  README.md

flag cpphs
  description: Use cpphs (fixes haddock source links)
  default:     False
  manual:      True

source-repository head
  type:     git
  location: https://github.com/haskell/filepath

library
  exposed-modules:
    System.OsPath.Data.ByteString.Short.Internal
    System.OsPath.Data.ByteString.Short.Word16.Internal
    System.OsPath.Encoding.Internal
    System.OsPath.Types.Internal
    System.OsString.Types.Internal

  other-extensions:
    CPP
    PatternGuards

  if impl(ghc >=7.2)
    other-extensions: Safe

  default-language: Haskell2010
  build-depends:
    , base              >=4.9      && <4.20
    , bytestring        >=0.11.3.0
    , deepseq
    , exceptions
    , template-haskell

  ghc-options:      -Wall

  if flag(cpphs)
    ghc-options:        -pgmPcpphs -optP--cpp
    build-tool-depends: cpphs:cpphs -any

